# maze-rs

./: Cargo.toml  notes.md
benches/: generator.rs
src/: bitvec.rs  extern_c.rs  generator.rs  in_memory_packed_grid.rs  lcg_rng.rs  lib.rs  main.rs  maze.rs  packed.rs  rdrand_rng.rs
src/generator/: mod.rs  naive_sidewinder_generator.rs  naive_sidewinder_generator.rs.dead  recursive_backtrack_generator.rs  recursive_backtrack_generator.rs.dead  recursive_division_generator.rs  recursive_division_generator.rs.dead  sidewinder_generator.rs  stack_backtrack_generator.rs  stack_backtrack_generator.rs.dead  stack_division_generator.rs  stack_division_generator.rs.dead
src/grid/: in_memory_packed_grid.rs  mod.rs
src/mmap_packed_grid/: carray.rs  mod.rs
src/packed/: carray.rs  in_memory_packed_array.rs  mmap_packed_array.rs  mod.rs
src/solver/: mod.rs  recursive_df_solver.rs  stack_df_solver.rs
